<resources>

    <!-- Nicht einteilbar -->
    <string name="user_input_weight_request">Geben Sie Ihr Gewicht in Kilogramm ein</string>
    <string name="wetterdialog_anfrage">Wählen Sie das heutige Wetter</string>
    <string name="nav_app_bar_close_drawer_description">Navigationsleiste schließen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!-- AndroidManifest.xml -->
    <string name="app_name">Hydroid</string>

    <!-- ProjectFiles with.kt -->
    <string name="preference_file_key">com.luan.hsworms.hydroid.PREFERENCE_FILE_KEY</string>
    <string name="saved_weight_of_user">savedWeightOfUser</string>
    <string name="saved_liquid_requirements_of_user">savedLiquidRequirementsOfUser</string>
    <string name="saved_drunk_liquid_of_user">savedDrunkLiquidOfUser</string>
    <string name="saved_gender_of_user">savedGenderOfUser</string>
    <string name="user_input_dialog_titel">Benutzerdaten</string>
    <string name="toast_daten_gesichert">Daten wurden gesichert</string>
    <string name="toast_gewicht_eingeben">Geben Sie ihr Gewicht ein</string>
    <string name="preferences_file_weather">com.luan.hsworms.hydroid.PREFERENCE_FILE_WEATHER</string>
    <string name="preferences_file_first_start">com.luan.hsworms.hydroid.PREFERENCE_FILE_FIRSTSTART</string>
    <string name="preferences_glasses">com.luan.hsworms.hydroid.PREFERENCE_FILE_GLASSES</string>
    <string name="savedSmallGlass">savedSmallGlass</string>
    <string name="savedMiddleGlass">savedMiddleGlass</string>
    <string name="savedBigGlass">savedBigGlass</string>
    <string name="savedHugeGlass">savedHugeGlass</string>
    <string name="isFirstStart">isFirstStart</string>
    <string name="saved_date">savedDate</string>
    <string name="saved_water_add_because_of_weather">savedWaterAddBecauseOfWeather</string>

    <!-- Common strings -->
    <string name="ok">OK</string>
    <string name="ablehnen">Ablehnen</string>
    <string name="percent">%</string>
    <string name="gewicht">Gewicht</string>
    <string name="gewicht_doppelpunkt">Gewicht:</string>
    <string name="slash">/</string>
    <string name="cancel">Cancel</string>
    <string name="delete_button">Delete</string>

    <!-- layout -->
    <!-- activity_splash_screen.xml -->
    <string name="logo_hydroit">Hydroid</string>
    <string name="logo_fragment_background_image">Glass of Water</string>

    <!-- add_Water_dialog.xml -->
    <string name="add_water_text_example">Fügen Sie eine Portion Wasser hinzu</string>
    <string name="add_water_dialog_tv_Volume_small">50</string>
    <string name="_100">100</string>
    <string name="sie_haben">Sie haben</string>
    <string name="_0">0</string>
    <string name="gew_hlt">gewählt</string>
    <string name="_200">200</string>
    <string name="_300">300</string>
    <string name="ml">Ml</string>

    <!-- app_bar_main.xml-->

    <!-- content_main.xml-->

    <!-- fragment_history.xml -->

    <!-- fragment_settings.xml-->
    <string name="einstellungen">Einstellungen</string>
    <string name="wasserbedarfstabelle">Wasserbedarfstabelle</string>
    <string name="weiblich">Weiblich</string>
    <string name="maennlich">Männlich</string>
    <string name="geschlecht_w_hlen">Geschlecht wählen</string>
    <string name="gewicht_ndern">Gewicht ändern</string>
    <string name="auswahl_der_gr_e_der_wasserportionen">Auswahl der Größe der Wasserportionen</string>
    <string name="kleines_glas">Kleines Glas</string>
    <string name="mittleres_glas">Mittleres Glas</string>
    <string name="gro_es_glas">Großes Glas</string>
    <string name="flasche">Flasche</string>

    <!-- fragment_sport_dialog.xml -->
    <string name="w_hlen_sie_ihre_aktuelle_aktivit_t">Wählen Sie Ihre aktuelle Aktivität</string>
    <string name="joggen">Joggen</string>
    <string name="fitness">Fitness</string>
    <string name="spaziergang">Spaziergang</string>

    <!-- fragment_water_requirement_Table.xml -->

    <!-- fragment_weather_dialog.xml -->
    <string name="w_hlen_sie_aktuelles_wetter">Wählen Sie das aktuelle Wetter</string>
    <string name="angenehmes_wetter">Angenehmes Wetter</string>
    <string name="warmes_wetter">Warmes Wetter</string>
    <string name="k_lte">Kälte</string>
    <string name="hitze">Hitze</string>

    <!-- item_histoty.xml -->
    <string name="date">Date</string>
    <string name="v_wasser_getrunken">V Wasser getrunken</string>
    <string name="t_glicher_wasserbedarf">Täglicher Wasserbedarf</string>
    <string name="der_t_gliche_bedarf">% der tägliche Bedarf</string>

    <!-- item_water_requirement.xml -->
    <string name="geschlecht">Geschlecht:</string>
    <string name="wasserbedarf">Wasserbedarf:</string>

    <!-- main_fragment.xml -->
    <string name="tagesfortschritt">Tagesfortschritt</string>

    <!-- nav_header.xml -->
    <string name="header_name">Hydroid</string>

    <!-- notification_fragment.xml -->
    <string name="noti_fragment_title">Benachrichtigungen</string>
    <string name="switch_allow_notification">Benachrichtigungen erhalten</string>
    <string name="switch_allow_noti_description">Schaltet die Benachrichtigungen, welche die App dir senden darf ein.</string>
    <string name="switch_help_drink">Hilf mir zu trinken!</string>
    <string name="switch_help_drink_description">Erinnert dich regelmäßig daran genug über den Tag zu trinken</string>
    <string name="notification_startTime_Tv">Startzeit</string>
    <string name="notification_endTime_Tv">Endzeitpunkt</string>
    <string name="setStartTime_Tv">__:__</string>
    <string name="setEndTime_Tv">__:__</string>
    <string name="actionbutton_description">ActionButton</string>
    <string name="endtimebutton_description">EndTimeButton</string>
    <string name="addEndTimeText_Tv">Endzeitpunkt hinzufügen</string>
    <string name="addStartTimeButton_description">StartTimeButton</string>
    <string name="addStartTimeText_Tv">Startzeitpunkt hinzufügen</string>

    <!-- user_data_dialog_fragment.xml -->
    <string name="user_data_question">Wählen Sie Ihr Geschlecht und Gewicht</string>
    <string name="edit_text_hint_weight_input">Geben Sie ihr Gewicht ein</string>

    <!-- water_requirement_dialog.xml -->
    <string name="neuen_wert_hinzuf_gen">Neuen Wert hinzufügen</string>
    <string name="in_diesem_dialog_k_nnen_sie_neue_werte_zur_berechnung_des_wasserbedarfs_hinzuf_gen">In diesem Dialog können Sie neue Werte zur Berechnung des Wasserbedarfs hinzufügen</string>
    <string name="wassermenge">Wassermenge</string>
    <string name="speichern">Speichern</string>

    <!-- menue-->
    <!-- navdrawer_menu.xml-->
    <string name="home">Home</string>
    <string name="nav_drawer_benutzerdaten">Benutzereinstellungen</string>
    <string name="nav_drawer_notifications">Benachrichtigungen</string>
    <string name="history">History</string>
    <string name="toast_user_data_dont_entered">Sie haben keine Daten eingegeben. Die Standardwerte werden festgelegt. Sie können sie im Abschnitt \"Benutzereinstellungen\" ändern. Sie werden ab dem nächsten Tag wirksam.</string>


</resources>