<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_user_settings"
            android:title="@string/nav_drawer_benutzerdaten"
            />
        <item
            android:id="@+id/notificationFragment"
            android:icon="@drawable/ic_notification"
            android:title="@string/nav_drawer_notifications"
            />
        <item
            android:id="@+id/historyFragment"
            android:icon="@drawable/ic_list"
            android:title="@string/history"
            />

    </group>

</menu>