<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherDialogFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/w_hlen_sie_aktuelles_wetter"
                android:textColor="@color/design_default_color_primary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_angenemes_wetter"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/angenehmes_wetter"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/btn_warmes_wettter"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/warmes_wetter"
                app:layout_constraintStart_toStartOf="@+id/btn_angenemes_wetter"
                app:layout_constraintTop_toBottomOf="@+id/btn_angenemes_wetter" />

            <Button
                android:id="@+id/btn_kaelte"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/k_lte"
                app:layout_constraintBottom_toBottomOf="@+id/btn_angenemes_wetter"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/btn_angenemes_wetter" />

            <Button
                android:id="@+id/btn_hitze"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/hitze"
                app:layout_constraintBottom_toBottomOf="@+id/btn_warmes_wettter"
                app:layout_constraintEnd_toEndOf="@+id/btn_kaelte"
                app:layout_constraintTop_toTopOf="@+id/btn_warmes_wettter" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/ablehnen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_warmes_wettter" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>