<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_water_requirement_dialog_titel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/neuen_wert_hinzuf_gen"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_water_requirement_dialog_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_diesem_dialog_k_nnen_sie_neue_werte_zur_berechnung_des_wasserbedarfs_hinzuf_gen"
                android:textColor="@color/hydroit_primary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_water_requirement_dialog_titel"
                app:layout_constraintTop_toBottomOf="@+id/tv_water_requirement_dialog_titel" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_water_requirement_dialog_comment" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/tv_water_requirement_dialog_comment"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <RadioButton
                    android:id="@+id/radioButtonWoman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#285E8A"
                    android:checked="true"
                    android:text="@string/weiblich"
                    android:textColor="#285E8A" />

                <RadioButton
                    android:id="@+id/radioButtonMan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#285E8A"
                    android:checked="false"
                    android:text="@string/maennlich"
                    android:textColor="#285E8A" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_edit_text_weight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupGender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gewicht"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_edit_text_amount_of_water"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/dialog_edit_text_weight"
                app:layout_constraintTop_toBottomOf="@+id/dialog_edit_text_weight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wassermenge"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/dialog_edit_text_amount_of_water"
                app:layout_constraintTop_toBottomOf="@+id/dialog_edit_text_amount_of_water" />

            <Button
                android:id="@+id/dialog_btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/speichern"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <Button
                android:id="@+id/dialog_btn_abort"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/ablehnen"
                app:layout_constraintEnd_toStartOf="@+id/dialog_btn_save"
                app:layout_constraintTop_toTopOf="@+id/dialog_btn_save" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>