<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/item_gender"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        tools:text="Männlich"
        android:textColor="@color/hydroit_primary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_weight_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        tools:text="68"
        android:textColor="@color/hydroit_primary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/item_gender" />

    <TextView
        android:id="@+id/item_requirement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        tools:text="600"
        android:textColor="@color/teal_200"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/item_gender" />

    <ImageView
        android:id="@+id/item_image_delete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/delete_button"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_gender"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/item_image_delete"
        app:layout_constraintStart_toEndOf="@+id/item_image_delete"
        app:layout_constraintTop_toTopOf="@+id/item_image_delete" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/geschlecht"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/gewicht_doppelpunkt"
        app:layout_constraintBottom_toBottomOf="@+id/item_weight_table"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="@+id/item_weight_table"
        app:layout_constraintVertical_bias="0.328" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/wasserbedarf"
        app:layout_constraintStart_toEndOf="@+id/item_gender"
        app:layout_constraintTop_toTopOf="@+id/item_gender" />

</androidx.constraintlayout.widget.ConstraintLayout>